Complete Responsive Volunteer Page

--- a/FirstApplication/Views/Home/Index.cshtml
+++ b/FirstApplication/Views/Home/Index.cshtml
@@ -498,7 +498,7 @@
                                             <img src="~/Assets/selected-star.png" />
                                             <img src="~/Assets/selected-star.png" />
                                             <img src="~/Assets/star.png" />
-                                            <img src="~/Assets/tar.png" />
+                                            <img src="~/Assets/star.png" />
                                         </div>
                                     </div>
                                     <div>
