--- a/FirstApplication/Views/Home/Volunteer.cshtml
+++ b/FirstApplication/Views/Home/Volunteer.cshtml
@@ -13,7 +13,7 @@
             <div class="col-lg-7 g-0">
                 <div class="image d-flex flex-column h-100">
                     <img src="~/Assets/CSR-initiative-stands-for-Coffee--and-Farmer-Equity-4.png"
-                         id="image-area" style="height: 625px;" class="w-100 h-100" />
+                         id="image-area" class="w-100 h-100" />
                     <div id="carousel-bottom" class="carousel slide">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -26,17 +26,17 @@
                                     <div class="col-3 p-1">
                                         <img src="~/Assets/Education-Supplies-for-Every--Pair-of-Shoes-Sold.png"
                                              class="bd-placeholder-img bd-placeholder-img-lg d-block w-100"
-                                             width="175" height="120" role="img" onclick="display(this)">
+                                              height="120" role="img" onclick="display(this)">
                                     </div>
                                     <div class="col-3 p-1">
                                         <img src="~/Assets/Grow-Trees-On-the-path-to-environment-sustainability.png"
                                              class="bd-placeholder-img bd-placeholder-img-lg d-block w-100"
-                                             width="175" height="120" role="img" onclick="display(this)">
+                                              height="120" role="img" onclick="display(this)">
                                     </div>
                                     <div class="col-3 p-1">
                                         <img src="~/Assets/Nourish-the-Children-in--African-country.png"
                                              class="bd-placeholder-img bd-placeholder-img-lg d-block w-100"
-                                             width="175" height="120" role="img" onclick="display(this)">
+                                             height="120" role="img" onclick="display(this)">
                                     </div>
                                 </div>
                             </div>
@@ -114,15 +114,21 @@
 
                 </div>
 
-                <div class="container pt-3 d-flex flex-wrap">
-                    <button class="mission-btn rounded-pill flex-fill">
-                        <i class="fa fa-heart-o px-2"
-                           style="color:#757575;"></i>Add to Favourite
-                    </button>
-                    <button class="mission-btn-1 rounded-pill flex-fill">
-                        <i class="fa fa-square px-2"></i>Recommend
-                        to a Co-Worker
-                    </button>
+                <div class="container pt-3">
+                    <div class="row">
+                        <div class="col-lg-6 pt-2">
+                            <button class="mission-btn rounded-pill w-100">
+                                <i class="fa fa-heart-o"
+                                   style="color:#757575;"></i>Add to Favourite
+                            </button>
+                        </div>
+                        <div class="col-lg-6 pt-2">
+                            <button class="mission-btn rounded-pill w-100">
+                                <i class="fa fa-square"></i>Recommend
+                                to a Co-Worker
+                            </button>
+                        </div>
+                    </div>
 
                 </div>
                 <h1 class="py-2">
@@ -136,30 +142,42 @@
                     </span>
                 </h1>
                 <div class="container-fluid">
-                    <div class="row border" width="662px">
-                        <div class="col-lg-3 col-md-3 col-6 last-con mx-" max-width="153px" min-height='130px'>
-                            <img src="~/Assets/pin1.png" alt="" class="my-3">
-                            <p style="color:#414141; font-size: 15px; ">
-                                <span style="color:#757575; font-size: 13px; ">city</span><br>London
-                            </p>
+                    <div class="row">
+                        <div class="col-lg-3 col-md-3 col-6">
+                            <div class="border px-3 my-2">
+
+                                <img src="~/Assets/pin1.png" alt="" class="my-3">
+                                <p style="color:#414141; font-size: 15px; ">
+                                    <span style="color:#757575; font-size: 13px; ">city</span><br>London
+                                </p>
+                            </div>
                         </div>
-                        <div class="col-lg-3 col-md-3 col-6 last-con mx-" width="153px" height='130px'>
-                            <img src="~/Assets/pin1.png" alt="" class="my-3">
-                            <p style="color:#414141; font-size: 15px; ">
-                                <span style="color:#757575; font-size: 13px; ">city</span><br>London
-                            </p>
+                        <div class="col-lg-3 col-md-3 col-6">
+                            <div class="border px-3 my-2">
+
+                                <img src="~/Assets/pin1.png" alt="" class="my-3">
+                                <p style="color:#414141; font-size: 15px; ">
+                                    <span style="color:#757575; font-size: 13px; ">city</span><br>London
+                                </p>
+                            </div>
                         </div>
-                        <div class="col-lg-3 col-md-3 col-6 last-con mx-" width="153px" height='130px'>
-                            <img src="~/Assets/pin1.png" alt="" class="my-3">
-                            <p style="color:#414141; font-size: 15px; ">
-                                <span style="color:#757575; font-size: 13px; ">city</span><br>London
-                            </p>
+                        <div class="col-lg-3 col-md-3 col-6">
+                            <div class="border px-3 my-2">
+
+                                <img src="~/Assets/pin1.png" alt="" class="my-3">
+                                <p style="color:#414141; font-size: 15px; ">
+                                    <span style="color:#757575; font-size: 13px; ">city</span><br>London
+                                </p>
+                            </div>
                         </div>
-                        <div class="col-lg-3 col-md-3 col-6 last-con mx-" width="153px" height='130px'>
+                        <div class="col-lg-3 col-md-3 col-6">
+                            <div class="border px-3 my-2">
+
                             <img src="~/Assets/pin1.png" alt="" class="my-3">
                             <p style="color:#414141; font-size: 15px; ">
                                 <span style="color:#757575; font-size: 13px; ">city</span><br>London
                             </p>
+                            </div>
                         </div>
                     </div>
                 </div>
